# ofxDarknet

./: LICENSE  README.md  addon_config.mk
example-deepdream/: example-deepdream.sln  example-deepdream.vcxproj
example-deepdream/src/: main.cpp  ofApp.cpp  ofApp.h
example-features/: example-features.sln  example-features.vcxproj
example-features/src/: ofApp.cpp  ofApp.h
example-go/: addons.make  example-go.sln  example-go.vcxproj
example-go/src/: ofApp.cpp  ofApp.h
example-imagenet/: example-imagenet.sln  example-imagenet.vcxproj
example-imagenet/src/: ofApp.cpp  ofApp.h
example-imagenet/src/cfg/: vgg-16.cfg
example-rnn/: addons.make  example-rnn.sln  example-rnn.vcxproj
example-rnn/src/: main.cpp  ofApp.cpp  ofApp.h
example-yolo2/: CMakeLists.txt  example-yolo2.sln  example-yolo2.vcxproj
example-yolo2/src/: ofApp.cpp  ofApp.h
lib/darknet/: activation_layer.c  activations.h  art.c  avgpool_layer.h  batchnorm_layer.c  blas.h  blas_kernels.cu  box.c  classifier.c  classifier.h  col2im.h  col2im_kernels.cu  compare.c  convolutional_kernels.cu  convolutional_layer.h  darknet.c  deconvolutional_kernels.cu  deconvolutional_layer.c  deconvolutional_layer.h  demo.c  detection_layer.c  dropout_layer.h  dropout_layer_kernels.cu  gemm.h  go.c  im2col_kernels.cu  image.h  list.c  local_layer.c  network.c  network.h  nightmare.c  normalization_layer.c  option_list.c  option_list.h  parser.c  parser.h  reorg_layer.c  rnn.c  rnn.h  (+8 more)
libs/cuda/include/: cudnn.h
libs/cuda/lib/vs/x64/: cublas.lib  cudart.lib  cudnn.lib  curand.lib
libs/darknet/: batchnorm_layer.h  box.h  captcha.c  connected_layer.c  crnn_layer.c  crop_layer.c  cuda.h  data.h  detector.c  gemm.c  im2col.h  network_kernels.cu  parser.c  rnn.h  rnn_vid.c  rnn_vid.h  route_layer.c  stb_image.h  voxel.c
libs/darknet/cMake/: CMakeLists.txt
libs/darknet/include/: art.c  avgpool_layer.c  avgpool_layer.h  box.c  cifar.c  classifier.c  classifier.h  coco.c  col2im.h  convolutional_layer.c  cost_layer.c  crop_layer.h  crop_layer_kernels.cu  cuda.c  data.c  deconvolutional_layer.c  deconvolutional_layer.h  demo.c  dice.c  dropout_layer.c  gettimeofday.c  gettimeofday.h  go.c  gru_layer.c  image.c  list.h  local_layer.h  matrix.c  maxpool_layer.c  maxpool_layer.h  maxpool_layer_kernels.cu  network.h  network_kernels.cu  nightmare.c  nightmare.h  option_list.c  option_list.h  parser.c  parser.h  region_layer.c  (+14 more)
libs/darknet/lib/osx/: libdarknetOSX.dylib
src/: ofxDarknet.cpp  ofxDarknet.h  ofxDarknetGo.cpp  ofxDarknetGo.h
